// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login input Login input email render correctly 1`] = `
<input
  className="login__input form__input"
  name="email"
  onChange={[MockFunction]}
  placeholder="Email"
  required={true}
  type="email"
  value="vasya@mail.ru"
/>
`;

exports[`Login input Login input password render correctly 1`] = `
<input
  className="login__input form__input"
  name="password"
  onChange={[MockFunction]}
  placeholder="Password"
  required={true}
  type="password"
  value="ezpz"
/>
`;
